--- a/mfdw_site/static/main.css
+++ b/mfdw_site/static/main.css
@@ -102,3 +102,16 @@ input {
 .required label::after{
     content: "*";
 }
+.quotehdr th {
+    background-color: #4c4c4c;
+    color: white;
+    text-align: center;
+    padding: 8px 5px;
+    border: none;
+}
+.quoterow td {
+    padding: 5px 10px;
+}
+.altrow {
+    background-color: #E0E0E0;
+}
